--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amazon-sumerian-hosts",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "",
   "scripts": {
     "test": "OS_NAME=\"$(uname)\" node ./node_modules/karma/bin/karma start",
@@ -8,7 +8,7 @@
     "build-test": "npm run build; npm run test",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build-start": "npm run build; npm run start",
-    "prepublishOnly": "npm run build",
+    "release": "npm run build",
     "docs": "jsdoc -c jsdoc.conf.json"
   },
   "keywords": [],
