--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amazon-sumerian-hosts",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "",
   "scripts": {
     "test": "OS_NAME=\"$(uname)\" node ./node_modules/karma/bin/karma start",
@@ -42,10 +42,11 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.1.1",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.2",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "three": "^0.115.0",
+    "three": "^0.125.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
