--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "babylonjs": "^4.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.18.2",
