Change Three and Babylon Imports to be a Versioned CDN

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
-    "babylonjs": "^4.1.0",
+    "babylonjs": "=4.2.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -46,7 +46,7 @@
     "karma-webpack": "^4.0.2",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "three": "^0.137.0",
+    "three": "=0.127.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.7.3",
