--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -2,16 +2,6 @@
   "name": "@amazon-sumerian-hosts/babylon",
   "version": "2.0.0",
   "description": "",
-  "license": "MIT",
-  "author": {
-    "name": "Amazon Web Services",
-    "url": "https://aws.amazon.com",
-    "organization": true
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aws-samples/amazon-sumerian-hosts.git"
-  },
   "main": "./dist/host.babylon.js",
   "scripts": {
     "test": "node ../../node_modules/karma/bin/karma start",
@@ -22,8 +12,17 @@
     "release": "npm run build",
     "docs": "jsdoc -c jsdoc.conf.json"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aws-samples/amazon-sumerian-hosts.git"
+  },
   "devDependencies": {
     "@amazon-sumerian-hosts/core": "^2.0.0",
     "babylonjs": "=4.2.1"
-  }
+  },
+  "optionalDependencies": {},
+  "dependencies": {}
 }
