Create README for Each Package
* Create and update README to each package in the repository, including the base
* Add in LICENSE to each package
* (Minor) Clean up webpack.common.js/webpack.test.js files to only export one item, and the karma.conf.js to only then expect one item
* (Minor) Fix pathing mistake in jsdoc.conf.json
* (Minor) Remove "docs" command from the sub-packages, keeping only in root
* (Minor) Add in jsconfig.json so VS Code can understand dependencies easier

--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -19,8 +19,7 @@
     "build-test": "npm run build; npm run test",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build-start": "npm run build; npm run start",
-    "release": "npm run build",
-    "docs": "jsdoc -c jsdoc.conf.json"
+    "release": "npm run build"
   },
   "devDependencies": {
     "@amazon-sumerian-hosts/core": "^2.0.0",
