[WIP]Cleanup webpack/karma build
Before we had an overcomplicated webpack setup. There were 3 webpack files + karma config per subpackage doing a bunch of inheritance

This caused a few problems:

The webpack builds were not aware of each other, so if you ran webpack in the babylon folder but changed something in core, you had to rebuild core.

The test target ran each subpackage test in sequence. You would have to scroll through the results to find the individual summary of each package.

It comes down to: We don't have a large enough of a monorepo to require many builds. We want multiple output packages, but multiple build processes are not helping us right now.

To fix, I have consolidated these. There is a single webpack build. There is still a 'test' that inherits from it, but only adds a few plugins needed to get the tests to run using three/babylon.

There is also a single karma config and all tests run together.

I removed a bunch of cruft from these, including a custom resolver that meant the code could 'only' run in webpack. I feel it's better to make things as vanilla as we can, no reason to depend on specific webpack features without a clear benefit.

I've also removed babel and any source map configuration, we can still tune thes but I'm not sure they are doing us any good either.

What's left:
* The test target doesn't pass a portion of the tests yet. It's not clear why, but wanted to get opinions of the work so far while I worked on this
* want to get the docs in here too, so doc changes can be read through webpack and autoreload, although this is secondary

Testing so far:
* npm test works for most tests
* npm build runs the single webpack build.
* `npm start` works and is able to serve the babylon examples. hotreload now works for code built by webpack. That is, open an example, change a piece of core or babylon code, and the code will rebuild and refresh the page. With Kris's PR, this will extend to the example app code itself(it is not built with 

--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -12,17 +12,13 @@
     "type": "git",
     "url": "https://github.com/aws-samples/amazon-sumerian-hosts.git"
   },
-  "main": "./dist/host.babylon.js",
+  "main": "./src/Babylon.js/index.js",
   "scripts": {
-    "test": "node ../../node_modules/karma/bin/karma start",
-    "build": "webpack --config webpack.common.js",
-    "build-test": "npm run build; npm run test",
-    "start": "webpack-dev-server --config webpack.dev.js",
-    "build-start": "npm run build; npm run start",
-    "release": "npm run build"
   },
-  "devDependencies": {
-    "@amazon-sumerian-hosts/core": "^2.0.0",
+  "dependencies": {
+    "@amazon-sumerian-hosts/core": "^2.0.0"
+  },
+  "peerDependencies": {
     "babylonjs": "=4.2.1"
   },
   "dependencies": {
