Add unit tests for HostUtils

--- a/packages/amazon-sumerian-hosts-babylon/.eslintrc
+++ b/packages/amazon-sumerian-hosts-babylon/.eslintrc
@@ -1,5 +1,7 @@
 {
-  "extends": ["../../.eslintrc"],
+  "extends": [
+    "../../.eslintrc.json"
+  ],
   "settings": {
     "import/resolver": {
       "webpack": {
