--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build-test": "npm run --workspaces build && npm run --workspaces test",
     "release": "npm run --workspaces build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "babylon-examples-serve": "npm run examples-serve --workspace ./packages/amazon-sumerian-hosts-babylon"
+    "babylon-examples-start": "npm run start --workspace ./packages/amazon-sumerian-hosts-babylon"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
