--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -17,7 +17,7 @@
     "test": "node ../../node_modules/karma/bin/karma start",
     "build": "webpack --config webpack.common.js",
     "build-test": "npm run build; npm run test",
-    "examples-serve": "webpack-dev-server --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "build-start": "npm run build; npm run start",
     "release": "npm run build"
   },
