--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "npm run --workspaces test",
-    "build": "npm run lint && npm run --workspaces build",
+    "build": "npm run lint && npm run build --workspaces",
     "build-test": "npm run --workspaces build && npm run --workspaces test",
     "release": "npm run --workspaces build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "babylon-demos-start": "npm run build && npm run start --workspace ./packages/demos-babylon"
+    "start-babylon-demos": "npm run build && npm run start --workspace ./packages/demos-babylon"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
