--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -24,5 +24,6 @@
   "devDependencies": {
     "@amazon-sumerian-hosts/core": "^2.0.0",
     "babylonjs": "=4.2.1"
-  }
+  },
+  "dependencies": {}
 }
