Fix: global variable 'AWS' not found when HostObject is imported
Add ability to pass in references to already-instantiated Polly clients as part of the host configuration

Host mesh root nodes have human readable names instead of __root__

Add AWS-SDK as a dependency so HostObject can be used from an npm installation of the package

Standardize import and fix optional jsdoc parameters

Compiled host.babylon.js changes after merge from mainline

--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "@amazon-sumerian-hosts/core": "^2.0.0",
     "babylonjs": "=4.2.1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1094.0"
   }
 }
