Add AWS-SDK as a dependency so HostObject can be used from an npm installation of the package

--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -25,5 +25,7 @@
     "@amazon-sumerian-hosts/core": "^2.0.0",
     "babylonjs": "=4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "aws-sdk": "^2.1094.0"
+  }
 }
