--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build-test": "npm run build build && npm run test",
     "release": "NODE_ENV=production npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "start": "NODE_ENV=development webpack-dev-server --open "
+    "start": "NODE_ENV=development webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
