--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "npm run --workspaces test",
-    "build": "npm run lint && npm run build --workspaces",
-    "build-test": "npm run --workspaces build && npm run --workspaces test",
-    "release": "npm run --workspaces build",
+    "test": "node ./node_modules/karma/bin/karma start",
+    "build": "npm run lint && webpack",
+    "build-test": "npm run build build && npm run test",
+    "release": "NODE_ENV=production npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "start-babylon-demos": "npm run build && npm run start --workspace ./packages/demos-babylon"
+    "start": "NODE_ENV=development webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
