--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "build-test": "npm run build build && npm run test",
     "release": "NODE_ENV=production npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "start": "NODE_ENV=development webpack-dev-server"
+    "start": "NODE_ENV=development webpack-dev-server",
+    "start-core": "ENGINE=core NODE_ENV=development webpack-dev-server",
+    "start-three": "ENGINE=three NODE_ENV=development webpack-dev-server",
+    "start-babylon": "ENGINE=babylon NODE_ENV=development webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
