--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ npm-debug.log
 build
 build/
 docs/
-packages/amazon-sumerian-hosts-babylon/examples/common/demo-credentials.js
+demo-credentials.js
 **/dist/
