--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "./packages/amazon-sumerian-hosts-three"
   ],
   "scripts": {
-    "lint": "echo eslint .",
+    "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "node ./node_modules/karma/bin/karma start",
+    "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
     "build": "npm run lint && webpack",
     "build-test": "npm run build build && npm run test",
     "release": "NODE_ENV=production npm run build",
@@ -29,7 +29,6 @@
     "start-three": "ENGINE=three NODE_ENV=development webpack-dev-server",
     "start-babylon": "ENGINE=babylon NODE_ENV=development webpack-dev-server"
   },
-  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
