--- a/packages/amazon-sumerian-hosts-core/package.json
+++ b/packages/amazon-sumerian-hosts-core/package.json
@@ -13,6 +13,10 @@
     "url": "https://github.com/aws-samples/amazon-sumerian-hosts.git"
   },
   "main": "./src/core/index.js",
+  "exports": {
+    "import": "./src/core/index.js",
+    "require": "./dist/host.core.js"
+  },
   "scripts": {
     "lint": "eslint .",
     "docs": "jsdoc -c jsdoc.conf.json"
