--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-webpack": "^5.0.0",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
