--- a/packages/amazon-sumerian-hosts-babylon/package.json
+++ b/packages/amazon-sumerian-hosts-babylon/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.1094.0"
   },
   "peerDependencies": {
-    "babylonjs": "=4.2.1"
+    "@babylonjs/core": "^4.2.1",
+    "@babylonjs/loaders": "^4.2.1"
   }
 }
