remove quote in prettier script to make it work on Winodws OS

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier 'packages/**/*.js' --write",
+    "format": "prettier packages/**/*.js --write",
     "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
     "build": "npm run format && npm run lint:fix && webpack",
     "build-test": "npm run build build && npm run test",
