--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
     "terser-webpack-plugin": "^5.3.1",
+    "typescript": "^4.6.3",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
