--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+      fail-fast: false # continue testing on all platforms even if one fails
     steps:
       - uses: actions/checkout@v2
       - name: Initialize CodeQL
