--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,10 +9,14 @@ on:
 # This doesn't work in Actions, however, so we set this env var to force the Headless runner
 env:
   TEST_BROWSERS: ChromeHeadless
-  
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+      fail-fast: false # continue testing on all platforms even if one fails
     steps:
       - uses: actions/checkout@v2
       - name: Initialize CodeQL
@@ -22,8 +26,7 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
-      - run: chromium --version
       - run: npm run build-test
       - name: Perform CodeQL Analysis
+        if: matrix.os == 'ubuntu-latest' # we only need to run this check on one platform
         uses: github/codeql-action/analyze@v1
-
