--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "./packages/amazon-sumerian-hosts-three"
   ],
   "scripts": {
+    "compile-ts": "tsc --build --verbose",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier packages/**/*.js --write",
     "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
-    "build": "npm run format && npm run lint:fix && webpack",
-    "build-test": "npm run build build && npm run test",
+    "build": "npm run format && npm run lint:fix && npm run compile-ts && webpack",
+    "build-test": "npm run build && npm run test",
     "release": "NODE_ENV=production npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
     "start": "NODE_ENV=development webpack-dev-server",
@@ -50,8 +51,8 @@
     "karma-webpack": "^5.0.0",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.3",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3",
