Fixes in response to code review

--- a/packages/demos-babylon/package.json
+++ b/packages/demos-babylon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demos-babylon",
   "version": "2.0.0",
-  "description": "Demos of the Babylon version of the Sumerian Hosts JS library",
+  "description": "Demos of the Babylon version of the Amazon Sumerian Hosts JS library",
   "private": true,
   "scripts": {
     "test": "",
