Fix issue where HOSTS_VERSION was incompatible with packages not using webpack.
We were setting the HOSTS_VERSION at build time using webpack.

We also want customers who want to use modules/not use our webpack build to be able to do so.

These are incompatible.

To solve this, we are now writing out the version number into source at release time.
This should have the same effect as before, anyone using an NPM release will get a version number, otherwise you will have 'development'.

I tested this in a release in my fork, you can see the overwritten file here in the artifacts: https://github.com/prestomation/amazon-sumerian-hosts/actions/runs/3301290701

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,10 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
+      - name: "Set version number"
+        run: |
+          perl -i -p -e "s/HOSTS_VERSION = .*/HOSTS_VERSION = '${{ github.event.release.tag_name }}';/" ${{ github.workspace }}/packages/amazon-sumerian-hosts-core/src/core/Utils.js
+
       - run: npm run release
       - run: npm publish --workspaces --access public
         env:
