--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
     "karma-webpack": "^5.0.0",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "terser-webpack-plugin": "^5.3.1",
+    "terser-webpack-plugin": "5.3.1",
     "typescript": "^4.6.3",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.76.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.7.3",
+    "webpack-merge": "5.8.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
