--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier *.js packages/**/*.js --write",
     "test": "node ./node_modules/karma/bin/karma start karma.conf.js",
-    "build": "npm run format && npm run lint:fix && npm run compile-ts && webpack",
+    "build": "npm run format && npm run lint:fix && npm run compile-ts",
     "build-test": "npm run build && npm run test",
-    "release": "cross-env NODE_ENV=production npm run build",
+    "release": "npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "start-core": "cross-env ENGINE=core NODE_ENV=development webpack-dev-server",
-    "start-three": "cross-env ENGINE=three NODE_ENV=development webpack-dev-server",
-    "start-babylon": "cross-env ENGINE=babylon NODE_ENV=development webpack-dev-server"
+    "start": "live-server .",
+    "start-core": "... todo open browser to core folder ...",
+    "start-three": "... todo open browser to three folder ...",
+    "start-babylon": "... todo open browser to babylon folder ..."
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -53,7 +53,6 @@
     "karma-webpack": "^5.0.0",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.5",
-    "terser-webpack-plugin": "5.3.1",
     "typescript": "^4.6.3",
     "webpack": "5.76.0",
     "webpack-cli": "4.10.0",
