--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build-test": "npm run build && npm run test",
     "release": "npm run build",
     "docs": "jsdoc -c jsdoc.conf.json",
-    "start": "live-server .",
+    "start": "five-server .",
     "start-core": "... todo open browser to core folder ...",
     "start-three": "... todo open browser to three folder ...",
     "start-babylon": "... todo open browser to babylon folder ..."
@@ -43,6 +43,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^6.2.0",
+    "five-server": "^0.3.1",
     "jsdoc": "^3.6.10",
     "karma": "^6.3.12",
     "karma-chrome-launcher": "^3.1.0",
