--- a/packages/amazon-sumerian-hosts-three/package.json
+++ b/packages/amazon-sumerian-hosts-three/package.json
@@ -23,6 +23,6 @@
     "@amazon-sumerian-hosts/core": "^2.0.0"
   },
   "peerDependencies": {
-    "three": "=0.127.0"
+    "three": ">=0.127.0"
   }
 }
