--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,7 @@
     "window": true,
     "XMLHttpRequest": true,
     "AWS": true,
-    "THREE": true,
-    "BABYLON": true,
+    "globalThis": true,
     "expectAsync": true
   },
   "rules": {
