--- a/packages/amazon-sumerian-hosts-three/package.json
+++ b/packages/amazon-sumerian-hosts-three/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.6",
   "description": "",
   "license": "MIT",
+  "type": "module",
   "author": {
     "name": "Amazon Web Services",
     "url": "https://aws.amazon.com",
@@ -13,10 +14,6 @@
     "url": "https://github.com/aws-samples/amazon-sumerian-hosts.git"
   },
   "main": "./src/three.js/index.js",
-  "exports": {
-    "import": "./src/three.js/index.js",
-    "require": "./dist/host.three.js"
-  },
   "scripts": {
   },
   "dependencies": {
